# qemount

./: .gitignore  AGENTS.md  CLAUDE.md  LLM_README.md  Makefile  README.md  TODO.md  deps.sh  generate_makefile.py  generate_makefiles.py  index.md  pyproject.toml
.all/: 001.md  002.md  003.md  004.md  005.md  006.md
.archive/: Dockerfile  archive.sh
1.backlog/: 02.freebsd-entrypoints.md  02.implement-aros-guest-s.md  04.mkfs-rust.md  index.md
2.doing/: 01.qemu-mac-build.md  02.log-colours.md
3.done/: 01.qemu-windows-build.md
builders/: Makefile
clients/: Makefile
docs/: TIMINGS.md  arc.md  arch.md  client.md  fs.md  guest.md  (+1 more)
src/qemount_build/lib/qemount/: Cargo.toml  Dockerfile  build.sh  index.md
src/qemount_build/lib/qemount/include/: qemount.h
src/qemount_build/lib/qemount/src/: checksum.rs  detect.rs  format.rs  lib.rs
src/qemount_build/lib/qemount/src/container/: mod.rs  slice.rs
src/qemount_build/lib/qemount/src/container/arc/: bzip2.rs  compress.rs  gzip.rs  lz4.rs  lzma.rs  mod.rs  xz.rs  zstd.rs
src/qemount_build/lib/qemount/src/container/disk/: apridisk.rs  atr.rs  bochs.rs  cdi.rs  cloop.rs  dmg.rs  dms.rs  ewf.rs  mod.rs  nrg.rs  parallels.rs  qcow.rs  qcow2.rs  qed.rs  scl.rs  twoimg.rs  vdi.rs  vhd.rs  vhdx.rs  vmdk.rs
src/qemount_build/lib/qemount/src/container/pt/: aix.rs  apm.rs  atari.rs  dasd.rs  disklabel.rs  gpt.rs  karma.rs  mbr.rs  mod.rs  pc98.rs  rdb.rs  sgi.rs  sun.rs  sysv68.rs  ubi.rs  ultrix.rs
src/qemount_build/lib/qemount/src/container/pt/acorn/: adfs.rs  cumana.rs  eesox.rs  ics.rs  mod.rs  powertec.rs
(+1410 files in other folders)
