[package]
name = "qemount"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "Universal filesystem detection and mounting library"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
libc = "0.2"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
