[package]
name = "qemount"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "Universal filesystem detection and mounting library"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bzip2 = { version = "0.4", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
xz2 = "0.1"
libc = "0.2"
lzfse = "0.2"
regex = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
